fixed line height issue and truncate error

--- a/public/stylesheets/compiled/hatrack.css
+++ b/public/stylesheets/compiled/hatrack.css
@@ -7,7 +7,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  min-width: 950px; }
+  min-width: 950px;
+  line-height: normal; }
 
 /* line 28, ../../../app/stylesheets/hatrack.sass */
 #hatrack {
